--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,10 @@
-aboutme.html
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Meet Hana</h1>
+<h2>About Me</h2>
+<p>Hana is a rising senior in high school who is part of Girls Who Code's Summer Immersion Program at Adobe.</p>
+
+</body>
+</html>
