--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
 <h1>Meet Hana</h1>
 <h2>About Me</h2>
 <p>Hana is a rising senior in high school who is part of Girls Who Code's Summer Immersion Program at Adobe.</p>
+  <button type="button">Likes</button>
 
 </body>
 </html>
