--- a/aboutme.html
+++ b/aboutme.html
@@ -3,9 +3,22 @@
 <body>
 
 <h1>Meet Hana</h1>
+  
 <h2>About Me</h2>
 <p>Hana is a rising senior in high school who is part of Girls Who Code's Summer Immersion Program at Adobe.</p>
-  <button type="button">Likes</button>
+
+  <h3>Likes</h3>
+  <ul>
+    <li>reading</li>
+    <li>streches and squats</li>
+    <li>The Office</li>
+  </ul>
+  
+  <h3>Dislikes</h3>
+  <ul>
+    <li>being cold</li>
+    <li>traffic</li>
+    <li>horror movies</li>
 
 </body>
 </html>
