--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
   <h3>Likes</h3>
   <ul>
     <li>reading</li>
-    <li>streches and squats</li>
+    <li>squatting</li>
     <li>The Office</li>
   </ul>
   
