--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 <h1>Meet Hana</h1>
   
 <h2>About Me</h2>
-<p>Hana is a rising senior in high school who is part of Girls Who Code's Summer Immersion Program at Adobe.</p>
+<p>Hana is a senior in high school who is speding her summer at Adobe for Girls Who Code's Summer Immersion Program.</p>
 
   <h3>Likes</h3>
   <ul>
