--- a/aboutme.html
+++ b/aboutme.html
@@ -3,9 +3,11 @@
 <body>
 
 <h1>Meet Hana</h1>
-  
+
+  <img src="https://s-media-cache-ak0.pinimg.com/736x/af/e7/0d/afe70deda532a34d5b01e18b2cacb015--watercolor-flowers-background-watercolor-flower-bouquet.jpg">
+
 <h2>About Me</h2>
-<p>Hana is a senior in high school who is speding her summer at Adobe for Girls Who Code's Summer Immersion Program.</p>
+<p>Hana is a senior in high school who is spending her summer at Adobe for Girls Who Code's Summer Immersion Program.</p>
 
   <h3>Likes</h3>
   <ul>
