--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,12 @@
     <li>horror movies</li>
   </ul>
     
-   <h3>my favorite webpages</h3>
+   <h3>My Favorite Webpages</h3>
+  <a href="https://www.nytimes.com/">The New York Times</a>
+  <a href="https://www.netflix.com/">Netflix</a>
+  <a href="http://damndelicious.net/">Damn Delicious</a>
+  
+  <p>Fun Fact! Hana is an Editor for her school newspaper and loves media</p>
     
 </body>
 </html>
