added background salmon color

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+  <head>  
+    <style>
+      body {
+        background-color:salmon;
+      }
+    </style>
+  </head>
+  
 <h1>Meet Hana</h1>
   <img src="https://s-media-cache-ak0.pinimg.com/736x/af/e7/0d/afe70deda532a34d5b01e18b2cacb015--watercolor-flowers-background-watercolor-flower-bouquet.jpg" style="width:250px; height: 470px;">
 <h2>About Me</h2>
