--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,10 @@
       body {
         background-color: salmon;
       }
+      h1 {
+        color: white;
+      }
+      
     </style>
   </head>
   
