--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
     <style>
       body {
         background-color: salmon;
+        font-family: 'Copse';
       }
       h1 {
         color: white;
