--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@
   <a href="http://damndelicious.net/">Damn Delicious</a>
   <br>
   
-  <p>Fun Fact! Hana is an Editor for her school newspaper and loves media</p>
+  <h4>Fun Fact! Hana is an Editor for her school newspaper and loves media</h4>
     
 </body>
 </html>
