--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,10 @@
       h1 {
         color: white;
       }
+      h4 {
+        color: white;
+        font-family: 'Croissant One';
+      }
       
     </style>
   </head>
