--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   
-<h1>Meet Hana</h1>
+  <center><h1>Meet Hana</h1></center>
   <img src="https://s-media-cache-ak0.pinimg.com/736x/af/e7/0d/afe70deda532a34d5b01e18b2cacb015--watercolor-flowers-background-watercolor-flower-bouquet.jpg" style="width:250px; height: 470px;">
 <h2>About Me</h2>
 <p>Hana is a senior in high school who is spending her summer at Adobe for Girls Who Code's Summer Immersion Program.</p>
