--- a/aboutme.html
+++ b/aboutme.html
@@ -5,14 +5,9 @@
     <style>
       body {
         background-color: salmon;
-        font-family: 'Copse';
       }
       h1 {
         color: white;
-      }
-      h4 {
-        color: white;
-        font-family: 'Croissant One';
       }
       
     </style>
@@ -47,7 +42,7 @@
   <a href="http://damndelicious.net/">Damn Delicious</a>
   <br>
   
-  <h4>Fun Fact! Hana is an Editor for her school newspaper and loves media</h4>
+  <i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media</h4></i>
     
 </body>
 </html>
