--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@
   <a href="http://damndelicious.net/">Damn Delicious</a>
   <br>
   
-  <i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media</h4></i>
+  <i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i>
     
 </body>
 </html>
