--- a/aboutme.html
+++ b/aboutme.html
@@ -17,8 +17,8 @@
   <br>
   
   <center><img src="https://s-media-cache-ak0.pinimg.com/736x/af/e7/0d/afe70deda532a34d5b01e18b2cacb015--watercolor-flowers-background-watercolor-flower-bouquet.jpg" style="width:250px; height: 470px;"></center>
-<h2>About Me</h2>
-<p>Hana is a senior in high school who is spending her summer at Adobe for Girls Who Code's Summer Immersion Program.</p>
+  <center><h2>About Me</h2></center>
+<center><p>Hana is a senior in high school who is spending her summer at Adobe for Girls Who Code's Summer Immersion Program.</p></center>
 
   <h3>Likes</h3>
   <ul>
