--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,7 @@
   <center><h2>About Me</h2></center>
 <center><p>Hana is a senior in high school who is spending her summer at Adobe for Girls Who Code's Summer Immersion Program.</p></center>
 
+<table style="width:100%">
   <h3>Likes</h3>
   <ul>
     <li>reading</li>
@@ -33,7 +34,8 @@
     <li>traffic</li>
     <li>horror movies</li>
   </ul>
-    
+  </table>
+  
    <h3>My Favorite Webpages</h3>
   <a href="https://www.nytimes.com/">The New York Times</a>
   <br>
