--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@
   <a href="http://damndelicious.net/">Damn Delicious</a>
   <br>
   
-  <i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i>
+  <center><i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i></center>
     
 </body>
 </html>
