--- a/aboutme.html
+++ b/aboutme.html
@@ -22,14 +22,14 @@
 
 
   <h3>Likes</h3>
-  <ul>
+  <ul style="width:10%; float:left;">
     <li>reading</li>
     <li>squatting</li>
     <li>The Office</li>
   </ul>
   
   <h3>Dislikes</h3>
-  <ul>
+  <ul styles="width:50%; float:right;">
     <li>being cold</li>
     <li>traffic</li>
     <li>horror movies</li>
