--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
   </ul>
   
   <h3>Dislikes</h3>
-  <ul styles="width:50%; float:right;">
+  <ul style="width:10%; float:right;">
     <li>being cold</li>
     <li>traffic</li>
     <li>horror movies</li>
