--- a/aboutme.html
+++ b/aboutme.html
@@ -21,19 +21,19 @@
 <center><p>Hana is a senior in high school who is spending her summer at Adobe for Girls Who Code's Summer Immersion Program.</p></center>
 
 
-  <h3>Likes</h3>
-  <ul>
+  <center><h3>Likes</h3></center>
+  <center><ul>
     <li>reading</li>
     <li>squatting</li>
     <li>The Office</li>
-  </ul>
+    </ul></center>
   
-  <h3>Dislikes</h3>
-  <ul>
+  <center><h3>Dislikes</h3></center>
+  <center><ul>
     <li>being cold</li>
     <li>traffic</li>
     <li>horror movies</li>
-  </ul>
+    </ul></center>
 
   
    <h3>My Favorite Webpages</h3>
