--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
     <style>
       body {
         background-color: salmon;
+        color: white;
       }
       h1 {
         color: white;
@@ -21,19 +22,19 @@
 <center><p>Hana is a senior in high school who is spending her summer at Adobe for Girls Who Code's Summer Immersion Program.</p></center>
 
 
-  <center><h3>Likes</h3></center>
-  <center><ul>
+  <h3>Likes</h3>
+  <ul>
     <li>reading</li>
     <li>squatting</li>
     <li>The Office</li>
-    </ul></center>
+    </ul>
   
-  <center><h3>Dislikes</h3></center>
-  <center><ul>
+ <h3>Dislikes</h3>
+  <ul>
     <li>being cold</li>
     <li>traffic</li>
     <li>horror movies</li>
-    </ul></center>
+    </ul>
 
   
    <h3>My Favorite Webpages</h3>
