--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@
     </ul>
 
   
-   <h3>My Favorite Webpages</h3>
+   <h3>Favorite Webpages</h3>
   <a href="https://www.nytimes.com/">The New York Times</a>
   <br>
   <a href="https://www.netflix.com/">Netflix</a>
