wrote update on learning python 6/20

--- a/aboutme.html
+++ b/aboutme.html
@@ -45,6 +45,9 @@
   <a href="http://damndelicious.net/">Damn Delicious</a>
   <br>
   
+  <h5>Learning Python on June 20</h5>
+  <p>To me learning Python was more about critical thinking and puzzle solving. It was also new to me because you have to be aware of all of the syntax so the computer can recognize your commands. I think it has been interesting so far, and I'm looking forward to applying these concepts to more advanced projects. I am realizing now that coding allows for a lot of flexibility when creating, which is really cool. It is just executing the code that seems difficult at this moment.</p>
+  
   <center><i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i></center>
     
 </body>
