--- a/aboutme.html
+++ b/aboutme.html
@@ -48,6 +48,9 @@
   <h5>Learning Python on June 20</h5>
   <p>To me learning Python was more about critical thinking and puzzle solving. It was also new to me because you have to be aware of all of the syntax so the computer can recognize your commands. I think it has been interesting so far, and I'm looking forward to applying these concepts to more advanced projects. I am realizing now that coding allows for a lot of flexibility when creating, which is really cool. It is just executing the code that seems difficult at this moment.</p>
   
+  <h5>Making Shapes in Python on Atom</h5>
+  <p>Today I worked on making shapes with Python while using an application called Atom on the laptop. First we had to draw a square and a triange using a turtle graphic. Then we took it a step forward and incorporated user input into the code by inputting questions for picking the color of the shapes. Then I made another file so the user could pick out color and number of shapes. I had to debug the code a lot at this point because I was getting errors when running the code. This was because of syntax problems such as using strings instead of integers, or forgetting a colon. Lastly I made a flower graphic where I used the fill function, and this file took me the longest to work on. This is because figuring out the angles of roation were confusing. Luckily in the end I got it, and got a pink flower with an orange center.</p>
+  
   <center><i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i></center>
     
 </body>
