--- a/aboutme.html
+++ b/aboutme.html
@@ -51,6 +51,9 @@
   <h5>Making Shapes in Python on Atom</h5>
   <p>Today I worked on making shapes with Python while using an application called Atom on the laptop. First we had to draw a square and a triange using a turtle graphic. Then we took it a step forward and incorporated user input into the code by inputting questions for picking the color of the shapes. Then I made another file so the user could pick out color and number of shapes. I had to debug the code a lot at this point because I was getting errors when running the code. This was because of syntax problems such as using strings instead of integers, or forgetting a colon. Lastly I made a flower graphic where I used the fill function, and this file took me the longest to work on. This is because figuring out the angles of roation were confusing. Luckily in the end I got it, and got a pink flower with an orange center.</p>
   
+  <h5>Data structures,Lists, Tuples, Functions June 23</h5>
+  <p>A list is a group of numbers or strings called under a variable name. It is useful because you can group data together, or call specific items at specific positions from the list. I worked best with the group consisting of Christina, Rachel, and Anatti because we all communicated well and it was fun talking about what we were coding. I like that python gives a lot of flexibilty in solving the same problem in different ways. I was also able to condense my code to make it more efficient. It was really fun solving all of the problems and breaking down the thought process of the math involved in solving the problems.</p>
+  
   <center><i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i></center>
     
 </body>
