--- a/aboutme.html
+++ b/aboutme.html
@@ -54,6 +54,9 @@
   <h5>Data structures,Lists, Tuples, Functions June 23</h5>
   <p>A list is a group of numbers or strings called under a variable name. It is useful because you can group data together, or call specific items at specific positions from the list. I worked best with the group consisting of Christina, Rachel, and Anatti because we all communicated well and it was fun talking about what we were coding. I like that python gives a lot of flexibilty in solving the same problem in different ways. I was also able to condense my code to make it more efficient. It was really fun solving all of the problems and breaking down the thought process of the math involved in solving the problems.</p>
   
+  <h5>Robotics and Circuits</h5>
+  <p>My ideas about robots changed because robots are more automatic and high functioning machines than just computers or phones, even if computers and phones are very powerful. I am excited that life will improve for most people with the integration of robotics into everyday life, like driving. I am nervous that robots can malfunction or have bugs in the code, which can make them dangerous. We also worked on Board of Education shields to make simple LED circuits, and all of our simple projects turned out really well. Next time we could try using more LEDs, or make more complex projects on the circuit boards.</p>
+  
   <center><i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i></center>
     
 </body>
