--- a/aboutme.html
+++ b/aboutme.html
@@ -57,6 +57,9 @@
   <h5>Robotics and Circuits</h5>
   <p>My ideas about robots changed because robots are more automatic and high functioning machines than just computers or phones, even if computers and phones are very powerful. I am excited that life will improve for most people with the integration of robotics into everyday life, like driving. I am nervous that robots can malfunction or have bugs in the code, which can make them dangerous. We also worked on Board of Education shields to make simple LED circuits, and all of our simple projects turned out really well. Next time we could try using more LEDs, or make more complex projects on the circuit boards.</p>
   
+  <h5>Escape Bot</h5>
+  <p>Today we coded our Arduino bot that can respond to its enviornments by using sensors. We put infared sensors on the breadboard and coded a program on Arduino so that if no objects are in front of the bot, the bot moves forward. If there is an object in front of the bot, it will turn away. In the code, if the sensor detected something in front of it, then it outputted the value 0. If not, it outputted a value of 1.</p>
+  
   <center><i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i></center>
     
 </body>
