--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
   <h5>Escape Bot</h5>
   <p>Today we coded our Arduino bot that can respond to its enviornments by using sensors. We put infared sensors on the breadboard and coded a program on Arduino so that if no objects are in front of the bot, the bot moves forward. If there is an object in front of the bot, it will turn away. In the code, if the sensor detected something in front of it, then it outputted the value 0. If not, it outputted a value of 1.</p>
   
-  <center><i><h4>Fun Fact! Hana is an Editor for her school newspaper and loves media.</h4></i></center>
-    
+  <h>The Internet and Cybersecurity on July 14</h5>
+  <p>The internet is the connected network of computers all over the world. Framework is a software template that can be personalized for its specific user or functionality. Phishing is when a hacker tries to aquire personal information online by posing as a reputable corporation organization.</p>
 </body>
 </html>
